[gd_scene load_steps=5 format=2]

[ext_resource path="res://gfx/water.png" type="Texture" id=1]
[ext_resource path="res://entities/world.gd" type="Script" id=2]
[ext_resource path="res://entities/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/value_label.tscn" type="PackedScene" id=4]

[node name="main" type="Node2D"]

[node name="Node2D" type="Node2D" parent="." index="0"]

_sections_unfolded = [ "Transform" ]

[node name="water" type="Sprite" parent="Node2D" index="0"]

position = Vector2( 0.0876465, 2.82153 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 20000, 20000 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="world" type="Node2D" parent="Node2D" index="1"]

script = ExtResource( 2 )

[node name="player" parent="Node2D" index="2" instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="Node2D/player" index="1"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Smoothing" ]

[node name="guiCanvas" type="CanvasLayer" parent="." index="1"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="gui" type="Container" parent="guiCanvas" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Mouse", "Size Flags" ]

[node name="starsLeft" parent="guiCanvas/gui" index="0" instance=ExtResource( 4 )]

anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -98.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 80.0
_sections_unfolded = [ "Margin" ]
value = "0"
label = "stars left"
rightAlign = true

[node name="timeLeft" parent="guiCanvas/gui" index="1" instance=ExtResource( 4 )]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 98.0
margin_bottom = 80.0
_sections_unfolded = [ "Margin" ]
value = "0"
label = "time left"
rightAlign = false


